--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.collab-proxy": "2.2.0",
+    "com.unity.feature.ar": "1.0.1",
     "com.unity.feature.development": "1.0.1",
     "com.unity.feature.vr": "1.0.0",
     "com.unity.inputsystem": "1.8.1",
@@ -8,9 +9,10 @@
     "com.unity.render-pipelines.universal": "14.0.10",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
-    "com.unity.visualscripting": "1.9.1",
-    "com.unity.xr.interaction.toolkit": "3.0.3",
-    "com.unity.xr.management": "4.4.0",
+    "com.unity.visualscripting": "1.9.5",
+    "com.unity.xr.hands": "1.3.0",
+    "com.unity.xr.interaction.toolkit": "3.0.7",
+    "com.unity.xr.management": "4.5.0",
     "com.unity.xr.openxr": "1.10.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
